Correcting Double Scrollbar Issue

--- a/docs/index.css
+++ b/docs/index.css
@@ -32,6 +32,14 @@
 
 }
 
+body, html
+{
+
+	overflow-x: hidden;
+	overflow-y: hidden;
+
+}
+
 .nonSelectable
 {
 
